# mtsx-ls

./: Cargo.toml  README.md
.github/workflows/: push.yml  release.yml
crates/parser/: Cargo.toml
crates/parser/src/: lexer.rs  lib.rs  parser.rs
crates/parser/src/parser/: tests.rs
crates/parser/src/parser/test_datas/: .gitignore  rust-syntax.mtsx  rust-syntax.rast
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  lib.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
editors/code/: .gitignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
editors/code/src/: extension.ts
editors/code/syntaxes/: mtsyntax.tmLanguage.json
src/: actions.rs  defs.rs  lib.rs  main.rs
