[package]
name = "mtsx-ls"
version = "0.1.0"
edition = "2024"

license = "MIT"

[workspace]
members = ["crates/parser", "crates/syntax"]

[workspace.dependencies]
rowan = "0.16.1"
char-classes = "0.3.5"
expect-test = "1.5.1"
text-size = "1.1.1"
dissimilar = "1.0.10"
either = "1.15.0"
parser = { version = "*", path = "crates/parser" }
syntax = { version = "*", path = "crates/syntax" }
line-column = { version = "0.3.1", features = ["span"] }
