[package]
name = "mtsx-ls"
version = "0.2.3"
edition = "2024"

license = "MIT"

[workspace]
members = ["crates/parser", "crates/syntax", "crates/test-utils"]

[workspace.dependencies]
rowan = "0.16.1"
char-classes = "0.3.5"
expect-test = "1.5.1"
text-size = "1.1.1"
dissimilar = "1.0.10"
either = "1.15.0"
line-column = { version = "0.3.1", features = ["span"] }
paste = "1.0.15"
parser = { version = "*", path = "crates/parser" }
syntax = { version = "*", path = "crates/syntax" }
test-utils = { version = "*", path = "crates/test-utils" }

[profile.dev.package]
dissimilar.opt-level = 3

[dependencies]
lsp-server = "0.7.9"
lsp-types = "0.97.0"
line-column.workspace = true
syntax.workspace = true
expect-test.workspace = true
test-utils.workspace = true
anyhow = "1.0.100"
crossbeam-channel = "0.5.15"
serde_json = "1.0.149"
getopts-macro = { version = "0.1.10", features = ["std"] }
